# ds-workflows-python

./: .gitignore  README.md  init.sh  justfile
assets/templates/: .bashrc  .connect-credentials  projects.json  starship.toml  vscode-settings.json
demo/: README.md
demo/01-data/: doc.qmd  pyproject.toml  requirements.txt
demo/01-data/.posit/publish/: Seattle Ferries - 01 Data ETL-G4PR.toml
demo/01-data/.posit/publish/deployments/: deployment-AKBF.toml
demo/02-model/: justfile  notebook.ipynb  pyproject.toml
demo/02-model/.posit/publish/: Washington Ferries - #2 Model -6N43.toml
demo/02-model/.posit/publish/deployments/: deployment-02Q7.toml
demo/02-model/api/: app.py  requirements.txt
demo/02-model/api/rsconnect-python/: api.json
demo/03-app/: pyproject.toml  requirements.txt
demo/03-app/.posit/publish/: Washington Ferries - #3 Delay -F2UI.toml
demo/03-app/.posit/publish/deployments/: deployment-ADME.toml
demo/03-app/src/: database.py
demo/03-app/src/modules/: data_summary.py  model_explorer.py
materials/01-reading-data/: .gitignore  notebook.ipynb  requirements.in  requirements.txt
materials/02-data-exploration-and-validation/: .gitignore  notebook.ipynb  requirements.in  requirements.txt
materials/03-model-training/: .gitignore  model.py  model_card.qmd  notebook.ipynb  requirements.in  requirements.txt
materials/03-model-training/api/: app.py  requirements.txt
materials/04-model-monitoring/: .gitignore  monitoring_dashboard.qmd  notebook.ipynb  requirements.in  requirements.txt
materials/05-shiny-app/: README.md  app.py  manifest.json  requirements.in  requirements.txt  test.ipynb  test.py
materials/05-shiny-app/rsconnect-python/: 05-shiny-app.json
materials/05-shiny-app/src/: database.py  module_data_explorer.py  module_model_explorer.py  timer.py
materials/06-bonus-stuff/python-package/: READEME.md  README.md  justfile  pyproject.toml
materials/06-bonus-stuff/python-package/ferryland/: ferryland.py
materials/06-bonus-stuff/python-package/tests/: test_vessel_apis.py
materials/06-bonus-stuff/shiny-app-monitoring/: .gitignore  (+4 more)
(+18 files in other folders)
