[project]
name = "01-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adbc-driver-postgresql>=1.2.0",
    "duckdb>=1.1.1",
    "hishel>=0.0.33",
    "httpx>=0.27.2",
    "ipykernel>=6.29.5",
    "pandera>=0.20.4",
    "polars>=1.9.0",
    "posit-sdk>=0.5.0",
    "pyarrow>=17.0.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.2",
]
