[project]
name = "03-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.1",
    "great-tables>=0.13.0",
    "httpx>=0.27.2",
    "ibis-framework>=9.5.0",
    "ipykernel>=6.29.5",
    "ipyleaflet>=0.19.2",
    "loguru>=0.7.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.9.0",
    "posit-sdk>=0.5.0",
    "pyarrow-hotfix>=0.6",
    "pyarrow>=17.0.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.2",
    "shiny>=1.1.0",
    "shinywidgets>=0.3.3",
]
